--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,12 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "vn.edu.uit.floodpoint"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -39,6 +40,9 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.race604.waveloading:library:1.1.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
