--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.race604.waveloading:library:1.1.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.github.warkiz.widget:indicatorseekbar:1.2.4'
 }
 apply plugin: 'com.google.gms.google-services'
